# starting-ragchatbot-codebase

./: .gitignore  CLAUDE.md  backend-tool-refactor.md  pyproject.toml  query_flow_diagram.md
backend/: .env.example  ai_generator.py  app.py  rag_system.py  search_tools.py
backend/tests/: conftest.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_error_handling.py  test_rag_system.py  test_real_system.py
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint.sh  quality-check.sh
